search for plugin

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 "keywords": [
-      "ecosystem:cordova",
-      "cordova-android",
-      "cordova-ios",
+  "ecosystem:cordova",
+  "cordova-android",
+  "cordova-ios"
 ]
