update to publish

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {"id": "cordova-plugin-kakaotalk",
-"name": "KakaoTalkCordovaPlugin",
+"name": "kakaotalkcordovaplugin",
 "version": "1.0.0",
 "auth": "lihak",
 "email": "lihak.kang@gmail.com",
