--- a/plugin.xml
+++ b/plugin.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
    id="cordova-plugin-kakaotalk"
-   name="KakaoTalkCordovaPlugin"
+   name="cordova-plugin-kakaotalk"
    version="1.0.0">
 
     <name>KakaoTalk</name>
